# QWMO

./: .gitignore  CITATION.cff  LICENSE  README.md  checklist.md  create_obsidian_vault.py  pyproject.toml  qwmo-update-plan.txt  requirements.txt
AOS-MATLAB/: AOS.m
QPSO-MATLAB/: Std_dev.m  f6_cubic_ELD_mobjective.m  pf_maxmax.m  qpso_cubic_mobjective.m
analysis/: __init__.py  convergence.py  diversity.py  escape_behavior.py  pauli_activation.py  runtime.py  sensitivity.py  stats.py
baselines/: __init__.py  aos.py  aso.py  qpso.py
benchmark/: __init__.py  cec2017.py
core/: __init__.py  agent.py  kdtree_util.py  qwmo.py
docs/: README.md  algorithm_overview.md  architecture.md  baselines.md
examples/: ablation_demo.py  quick_start.py  run_qwmo_on_benchmarks.py
experiments/: __init__.py  config.py  reproduce_paper_results.py  run_ablation.py  run_experiments.py  runner.py  utils.py
operators/: __init__.py  escape.py  orbital.py  pauli.py
paper/: README.md  main.tex  qwmo_figure_final.tex  references_final.bib
qwmo/: __init__.py  benchmarks.py  optimizer.py
